frontend/src/app/components/chats/menssages/menssages.css
.bubble {
    border: 3px solid #222;
    padding: 10px 20px;
    font-size: 16px;
    border-radius: 8px; 
    max-width: 75%; 
}

.userPhoto{
    width: 40px;
    height: 40px;
    border-radius: 50%;
    object-fit: cover; 
}

.input-wrapper {
  display: flex;
  gap: 10px;
  background-color: #f5f5f5;
  padding: 5px 15px;
  border-radius: 25px;
}

.input-wrapper textarea {
  flex: 1;
  border: none;
  background: transparent;
  padding: 10px;
  outline: none;
  resize: none;
  max-height: 150px;
  overflow-y: auto;
}

.input-wrapper button {
  background: transparent;
  border: none;
  font-size: 1.2rem;
  color: #000000;
  cursor: pointer;
}

.input-wrapper button:disabled {
  color: #ccc;
}

@media (max-width: 768px) {
  .chat-header {
    justify-content: space-between;
    padding: 10px 15px;
  }

  .mobile-back-btn {
    display: block;
  }

  .chat-header h2 {
    font-size: 1.1rem;
  }
}
/* --- PC (min-width: 769px) --- */
@media (min-width: 769px) {
  .chat-header {
    justify-content: flex-start;
  }
}

